[project]
name = "mermaid-py"
version = "0.8.4"
description = "Python Interface for the Popular mermaid-js Library, Simplified for Diagram Creation."
readme = "README.md"
license = "MIT"
authors = [
	{name = "ouhammmourachid", email = "rachidouhammou21@gmail.com"}
]
requires-python = ">=3.9"

dependencies = [
    "requests>=2.32.5"
]
classifiers = [
    # Update the following list as the project matures
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Framework :: FastAPI",
    "Framework :: AsyncIO",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
    "Typing :: Typed",
]


[dependency-groups]
dev = [
    "build",
    "codecov>=2.1.13",
    "coverage>=7.10.7",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
    "twine>=6.2.0",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[bumpver]
current_version = "0.8.4"
version_pattern = "MAJOR.MINOR.PATCH"

[bumpver.file_patterns]
"pyproject.toml" = [
	'version = "{version}"$'
]
"mermaid/__init__.py" = [
	'^__version__: str = "{version}"$',
]

# codespell configuration
[tool.codespell]
skip = 'docs/*.json,docs/*.yaml,*.lock'
count = true
quiet-level = 3
