[project]
name = "mermaid-py"
version = "0.8.4"
description = "Python Interface for the Popular mermaid-js Library, Simplified for Diagram Creation."
readme = "README.md"
license = "MIT"
authors = [
	{name = "ouhammmourachid", email = "rachidouhammou21@gmail.com"}
]
requires-python = ">=3.9"

dependencies = [
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "codecov>=2.1.13",
    "coverage>=7.10.7",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]

[tool.uv]
default-groups = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[bumpver]
current_version = "0.8.4"
version_pattern = "MAJOR.MINOR.PATCH"

[bumpver.file_patterns]
"pyproject.toml" = [
	'version = "{version}"$'
]
"mermaid/__init__.py" = [
	'^__version__: str = "{version}"$',
]

# codespell configuration
[tool.codespell]
skip = 'docs/*.json,docs/*.yaml,*.lock'
count = true
quiet-level = 3